implemented models and controllers for miners
